--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -7,6 +7,10 @@
     ],
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "sourceMap": true,
+    "declarationMap": true,
+    "inlineSourceMap": false,
+    "inlineSources": false,
     "baseUrl": ".",
     "paths": {
       "@/*": [
